{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 121,
  "lineage": "cdbbc3b6-491c-49a1-7048-7bd1838ccd74",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_rds_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326151034032:security-group/sg-0873eadd4a151f852",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0873eadd4a151f852",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d1cfe3556c81799"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240820161035976800000003",
            "name_prefix": "terraform-",
            "owner_id": "326151034032",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg-chirag"
            },
            "tags_all": {
              "Name": "rds-sg-chirag"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2767f35b66616d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg_ssh",
            "aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326151034032:security-group/sg-06d1cfe3556c81799",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d1cfe3556c81799",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240820161030283600000001",
            "name_prefix": "terraform-",
            "owner_id": "326151034032",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg-chirag"
            },
            "tags_all": {
              "Name": "ec2-sg-chirag"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2767f35b66616d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Project_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326151034032:subnet/subnet-0ff4af0f365145026",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff4af0f365145026",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326151034032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c2767f35b66616d1"
          },
          "dependencies": [
            "aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Project_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326151034032:subnet/subnet-013f036ec72987ad6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013f036ec72987ad6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326151034032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c2767f35b66616d1"
          },
          "dependencies": [
            "aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ProjectVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326151034032:vpc/vpc-0c2767f35b66616d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f85f94a575632181",
            "default_route_table_id": "rtb-03b4d1fe5ac556799",
            "default_security_group_id": "sg-07a1fb568917c3923",
            "dhcp_options_id": "dopt-02000fb8b0a2c3cc6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2767f35b66616d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03b4d1fe5ac556799",
            "owner_id": "326151034032",
            "tags": {
              "Name": "MyVPC-chirag"
            },
            "tags_all": {
              "Name": "MyVPC-chirag"
            }
          }
        }
      ]
    }
  ]
}